test/errors/mode.rom
Error in `mode.asm` on line 2: Invalid addressing mode
